# yarp-device-realsense2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/devices/realsense2Tracking/: realsense2Tracking.xml  yarprobotinterface.ini
app/devices/realsense2Tracking/sensors/: realsense.xml
app/devices/realsense2Tracking/wrappers/: grabber_yarp.xml  pose_ros.xml  pose_yarp.xml
src/devices/: CMakeLists.txt
src/devices/realsense2/: CMakeLists.txt  realsense2Driver.cpp  realsense2Driver.h  realsense2Tracking.cpp  realsense2Tracking.h  realsense2withIMUDriver.cpp  realsense2withIMUDriver.h
